--- a/pages/form/form-finish.html
+++ b/pages/form/form-finish.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="../../styles/player.css">
     <link rel="stylesheet" href="../../styles/style.css">
     <link rel="stylesheet" href="../../styles/form.css">
+    <link rel="stylesheet" href="../../styles/account.css">
 </head>
 <body>
     <div id="__next">
@@ -251,74 +252,74 @@
             <div class="Default_defaultContainer ">
                 <div class="FamilyLk_wrap">
                     <div class="FamilyLk_main">
-                        <div class="CurrentNeeds_block">
+                        <div class="CurrentNeeds_block" style="margin-bottom: 20px;">
                             <p>Ваша заявка отправлена на модерацию, после модерации вы получите уведомление</p>
                         </div>
-                    </div>
-                    <div class="FamilyLk_sidebar">
-                        <div class="InfoBlock_block">
-                            <div class="InfoBlock_label">Семья</div>
-                            <div class="InfoBlock_rowControl InfoBlock_rowName">
-                                <div class="InfoBlock_group">
-                                    <p class="InfoBlock_name">-</p>
+                        <div class="FamilyLk_sidebar Account_sidebar">
+                            <div class="InfoBlock_block">
+                                <div class="InfoBlock_label">Семья</div>
+                                <div class="InfoBlock_rowControl InfoBlock_rowName">
+                                    <div class="InfoBlock_group">
+                                        <p class="InfoBlock_name">-</p>
+                                    </div>
+                                    <div class="InfoBlock_controls"><button class="InfoBlock_btn"><svg
+                                                xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
+                                                viewBox="0 0 14 14">
+                                                <path
+                                                    d="M8.58976 2.70459L0.453762 10.8376L0 14.0001L3.16368 13.5465L11.2997 5.41351L8.58976 2.70459Z"
+                                                    fill="#999B9F"></path>
+                                                <path
+                                                    d="M11.7479 0.443872L13.5557 2.25092C13.6755 2.37071 13.8754 2.57725 13.9986 2.71073C13.8651 2.84421 13.6755 3.03459 13.5557 3.15449L12.1999 4.50975L9.48828 1.79913L10.844 0.443872C10.9639 0.32408 11.1945 0.112947 11.3075 0C11.4615 0.154019 11.6281 0.32408 11.7479 0.443872Z"
+                                                    fill="#999B9F"></path>
+                                            </svg></button></div>
                                 </div>
-                                <div class="InfoBlock_controls"><button class="InfoBlock_btn"><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
-                                            viewBox="0 0 14 14">
-                                            <path
-                                                d="M8.58976 2.70459L0.453762 10.8376L0 14.0001L3.16368 13.5465L11.2997 5.41351L8.58976 2.70459Z"
-                                                fill="#999B9F"></path>
-                                            <path
-                                                d="M11.7479 0.443872L13.5557 2.25092C13.6755 2.37071 13.8754 2.57725 13.9986 2.71073C13.8651 2.84421 13.6755 3.03459 13.5557 3.15449L12.1999 4.50975L9.48828 1.79913L10.844 0.443872C10.9639 0.32408 11.1945 0.112947 11.3075 0C11.4615 0.154019 11.6281 0.32408 11.7479 0.443872Z"
-                                                fill="#999B9F"></path>
-                                        </svg></button></div>
-                            </div>
-                            <div class="InfoBlock_rowControl InfoBlock_rowCity">
-                                <div class="InfoBlock_group">
-                                    <p class="InfoBlock_city">тесттест</p>
+                                <div class="InfoBlock_rowControl InfoBlock_rowCity">
+                                    <div class="InfoBlock_group">
+                                        <p class="InfoBlock_city">тесттест</p>
+                                    </div>
+                                    <div class="InfoBlock_controls"><button class="InfoBlock_btn"><svg
+                                                xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
+                                                viewBox="0 0 14 14">
+                                                <path
+                                                    d="M8.58976 2.70459L0.453762 10.8376L0 14.0001L3.16368 13.5465L11.2997 5.41351L8.58976 2.70459Z"
+                                                    fill="#999B9F"></path>
+                                                <path
+                                                    d="M11.7479 0.443872L13.5557 2.25092C13.6755 2.37071 13.8754 2.57725 13.9986 2.71073C13.8651 2.84421 13.6755 3.03459 13.5557 3.15449L12.1999 4.50975L9.48828 1.79913L10.844 0.443872C10.9639 0.32408 11.1945 0.112947 11.3075 0C11.4615 0.154019 11.6281 0.32408 11.7479 0.443872Z"
+                                                    fill="#999B9F"></path>
+                                            </svg></button></div>
                                 </div>
-                                <div class="InfoBlock_controls"><button class="InfoBlock_btn"><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
-                                            viewBox="0 0 14 14">
-                                            <path
-                                                d="M8.58976 2.70459L0.453762 10.8376L0 14.0001L3.16368 13.5465L11.2997 5.41351L8.58976 2.70459Z"
-                                                fill="#999B9F"></path>
-                                            <path
-                                                d="M11.7479 0.443872L13.5557 2.25092C13.6755 2.37071 13.8754 2.57725 13.9986 2.71073C13.8651 2.84421 13.6755 3.03459 13.5557 3.15449L12.1999 4.50975L9.48828 1.79913L10.844 0.443872C10.9639 0.32408 11.1945 0.112947 11.3075 0C11.4615 0.154019 11.6281 0.32408 11.7479 0.443872Z"
-                                                fill="#999B9F"></path>
-                                        </svg></button></div>
-                            </div>
-                            <div class="InfoBlock_separator"></div>
-                            <p class="InfoBlock_email">descreat@yandex.ru</p>
-                            <div class="InfoBlock_rowControl InfoBlock_rowPhone">
-                                <div class="InfoBlock_group">
-                                    <p class="InfoBlock_city">74353454353</p>
+                                <div class="InfoBlock_separator"></div>
+                                <p class="InfoBlock_email">descreat@yandex.ru</p>
+                                <div class="InfoBlock_rowControl InfoBlock_rowPhone">
+                                    <div class="InfoBlock_group">
+                                        <p class="InfoBlock_city">74353454353</p>
+                                    </div>
+                                    <div class="InfoBlock_controls"><button class="InfoBlock_btn"><svg
+                                                xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
+                                                viewBox="0 0 14 14">
+                                                <path
+                                                    d="M8.58976 2.70459L0.453762 10.8376L0 14.0001L3.16368 13.5465L11.2997 5.41351L8.58976 2.70459Z"
+                                                    fill="#999B9F"></path>
+                                                <path
+                                                    d="M11.7479 0.443872L13.5557 2.25092C13.6755 2.37071 13.8754 2.57725 13.9986 2.71073C13.8651 2.84421 13.6755 3.03459 13.5557 3.15449L12.1999 4.50975L9.48828 1.79913L10.844 0.443872C10.9639 0.32408 11.1945 0.112947 11.3075 0C11.4615 0.154019 11.6281 0.32408 11.7479 0.443872Z"
+                                                    fill="#999B9F"></path>
+                                            </svg></button></div>
                                 </div>
-                                <div class="InfoBlock_controls"><button class="InfoBlock_btn"><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
-                                            viewBox="0 0 14 14">
-                                            <path
-                                                d="M8.58976 2.70459L0.453762 10.8376L0 14.0001L3.16368 13.5465L11.2997 5.41351L8.58976 2.70459Z"
-                                                fill="#999B9F"></path>
-                                            <path
-                                                d="M11.7479 0.443872L13.5557 2.25092C13.6755 2.37071 13.8754 2.57725 13.9986 2.71073C13.8651 2.84421 13.6755 3.03459 13.5557 3.15449L12.1999 4.50975L9.48828 1.79913L10.844 0.443872C10.9639 0.32408 11.1945 0.112947 11.3075 0C11.4615 0.154019 11.6281 0.32408 11.7479 0.443872Z"
-                                                fill="#999B9F"></path>
-                                        </svg></button></div>
+                                <div class="InfoBlock_separator"></div>
+                                <div class="InfoBlock_row">
+                                    <p class="InfoBlock_gifts">Подарки</p>
+                                    <p class="InfoBlock_text">1 заявка</p>
+                                </div>
+                                <div class="InfoBlock_giftList"></div><button class="InfoBlock_logout"><svg
+                                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path
+                                            d="M15 7.99951V3.99951C15 2.89494 14.1046 1.99951 13 1.99951H4C2.89543 1.99951 2 2.89494 2 3.99951L2 19.9995C2 21.1041 2.89543 21.9995 4 21.9995H13C14.1046 21.9995 15 21.1041 15 19.9995V15.9995"
+                                            stroke="#292929" stroke-width="2" stroke-linecap="round"></path>
+                                        <path d="M19 15L21.2929 12.7071C21.6834 12.3166 21.6834 11.6834 21.2929 11.2929L19 9"
+                                            stroke="#292929" stroke-width="2" stroke-linecap="round"></path>
+                                        <path d="M21 12L9 12" stroke="#292929" stroke-width="2" stroke-linecap="round"></path>
+                                    </svg>Выйти</button>
                             </div>
-                            <div class="InfoBlock_separator"></div>
-                            <div class="InfoBlock_row">
-                                <p class="InfoBlock_gifts">Подарки</p>
-                                <p class="InfoBlock_text">1 заявка</p>
-                            </div>
-                            <div class="InfoBlock_giftList"></div><button class="InfoBlock_logout"><svg
-                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path
-                                        d="M15 7.99951V3.99951C15 2.89494 14.1046 1.99951 13 1.99951H4C2.89543 1.99951 2 2.89494 2 3.99951L2 19.9995C2 21.1041 2.89543 21.9995 4 21.9995H13C14.1046 21.9995 15 21.1041 15 19.9995V15.9995"
-                                        stroke="#292929" stroke-width="2" stroke-linecap="round"></path>
-                                    <path d="M19 15L21.2929 12.7071C21.6834 12.3166 21.6834 11.6834 21.2929 11.2929L19 9"
-                                        stroke="#292929" stroke-width="2" stroke-linecap="round"></path>
-                                    <path d="M21 12L9 12" stroke="#292929" stroke-width="2" stroke-linecap="round"></path>
-                                </svg>Выйти</button>
                         </div>
                         <div class="SwitchTabs_block"><button
                                 style="width: 100%; text-align: left; display: block; border: none; padding: 15px 25px; border-radius: 18px; color: rgb(0, 0, 0); background: rgb(255, 255, 255); font-weight: 600; font-size: 16px;">Текущая
