--- a/pages/form/form1.html
+++ b/pages/form/form1.html
@@ -2074,12 +2074,10 @@
                                                                                                 </div>
                                                                                                 <div class="sd-dropdown_chevron-button"
                                                                                                     aria-hidden="true">
-                                                                                                    <svg class="sv-svg-icon sd-dropdown_chevron-button-svg"
-                                                                                                        role="img">
-                                                                                                        <use
-                                                                                                            xlink:href="#icon-chevron">
-                                                                                                        </use>
-                                                                                                    </svg></div>
+                                                                                                    <svg class="sv-svg-icon" width="16" height="9" viewBox="0 0 16 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                                                                        <path d="M1 1L8 7L15 1" stroke="#FF3351" stroke-width="2" stroke-linecap="round"/>
+                                                                                                        </svg>                                                                                                        
+                                                                                                </div>
                                                                                             </div>
                                                                                         </div>
                                                                                     </div>
